--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>Contact info</h1>
     <p>Zelena st</p>
     <h1>new header</h1>
+    <table>
+        <tr></tr>
+    </table>
 </body>
 </html>
