--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hi</p>
+    <p>hi everyone</p>
     <h1>Contact info</h1>
     <p>Zelena st</p>
     <h1>new header</h1>
