--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>hi</p>
     <h1>Contact info</h1>
+    <h2>Add something after Contact info and before Zelena st</h2>
     <p>Zelena st</p>
 </body>
 </html>
