--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>hi everyone</p>
     <h1>Contact info</h1>
-    <h2>Add something after Contact info and before Zelena st</h2>
+    <h2>Add something after Contact info and before Zelena st1</h2>
     <p>Zelena st</p>
     <h1>new header</h1>
     <table>
