--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document1</title>
 </head>
 <body>
-    <p>Hello everyone</p>
+    <p>Hello everyone!</p>
     <h1>Contact info</h1>
     <h2>Add something after Contact info and before Zelena st1</h2>
     <p>Zelena st</p>
